--- a/weight/weight.ioc
+++ b/weight/weight.ioc
@@ -3,6 +3,7 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
@@ -16,15 +17,16 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA3
 Mcu.Pin1=PA4
+Mcu.Pin10=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA5
 Mcu.Pin3=PA6
 Mcu.Pin4=PA8
 Mcu.Pin5=PA9
 Mcu.Pin6=PA10
-Mcu.Pin7=VP_SYS_VS_ND
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.Pin9=VP_TIM3_VS_ClockSourceINT
-Mcu.PinsNb=10
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -43,6 +45,10 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_JTCK-SWCLK
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=DOUT1
 PA3.Locked=true
@@ -119,8 +125,6 @@ TIM3.Period=49
 TIM3.Prescaler=72-1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
-VP_SYS_VS_ND.Mode=No_Debug
-VP_SYS_VS_ND.Signal=SYS_VS_ND
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
